onedeploy/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: khedma
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: postgres
          image: postgres:15.3-alpine
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
