onedeploy/deployment-frontend.yml
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: frontend-deploy
#   labels:
#     app: khedma-app
#     test: test
#   annotations:
#     fluxcd.io/tag.example-app: semver:~1.0
#     fluxcd.io/automated: 'true'
# spec:
#   selector:
#     matchLabels:
#       app: khedma-app
#   replicas: 2
#   strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxSurge: 1
#       maxUnavailable: 0
#   template:
#     metadata:
#       labels:
#         app: khedma-app
#     spec:
#       containers:
#       - name: khedma-app
#         image: mohamedamineblibech/frontend:v1.0
#         imagePullPolicy: Always
#         ports:
#         - containerPort: 3000
#         # livenessProbe:
#         #   httpGet:
#         #     path: /status
#         #     port: 5000
#         #   initialDelaySeconds: 3
#         #   periodSeconds: 3
#         resources:
#           requests:
#             memory: "64Mi"
#             cpu: "50m"
#           limits:
#             memory: "256Mi"
#             cpu: "500m"
#       tolerations:
#       - key: "cattle.io/os"
#         value: "linux"
#         effect: "NoSchedule"      
# #NOTE: comment out `volumeMounts` section for configmap and\or secret guide
#         # volumeMounts:
#         # - name: secret-volume
#         #   mountPath: /secrets/
#         # - name: config-volume
#         #   mountPath: /configs/
# #NOTE: comment out `volumes` section for configmap and\or secret guide
#       # volumes:
#       # - name: secret-volume
#       #   secret:
#       #     secretName: mysecret
#       # - name: config-volume
#       #   configMap:
#       #     name: example-config #name of our configmap object
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deploy
  labels:
    app: example-app
    test: test
  annotations:
    fluxcd.io/tag.example-app: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: example-app
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example-app
        image: mohamedamineblibech/frontend:v1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        # livenessProbe:
        #   httpGet:
        #     path: /status
        #     port: 5000
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      tolerations:
      - key: "cattle.io/os"
        value: "linux"
        effect: "NoSchedule"      
#NOTE: comment out `volumeMounts` section for configmap and\or secret guide
        # volumeMounts:
        # - name: secret-volume
        #   mountPath: /secrets/
        # - name: config-volume
        #   mountPath: /configs/
#NOTE: comment out `volumes` section for configmap and\or secret guide
      # volumes:
      # - name: secret-volume
      #   secret:
      #     secretName: mysecret
      # - name: config-volume
      #   configMap:
      #     name: example-config #name of our configmap object
