onedeploy/deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: celery-worker
  labels:
    deployment: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: celery-worker
  template:
    metadata:
      labels:
        pod: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: mohamedamineblibech/backend:v1.43
          command: ['sh', '-c', "cd /django/khedma && celery -A khedma worker -l INFO"]
          volumeMounts:
            - name: media-volume-mount
              mountPath: /django/khedma/media
      volumes:
        - name: media-volume-mount
          persistentVolumeClaim:
            claimName: media-pvc-local


            ##
