onedeploy/frontend_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    type: reactnode
spec:
  containers:
  - name: front-app
    image: mohamedamineblibech/frontend:v1.1
    ports:
      - name: front-app
        containerPort: 3000
        targetPort: 80
