onedeploy/backenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: khedma
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: mohamedamineblibech/khedmabackend:v1.0
        volumeMounts:
        - mountPath: /django/khedma/media
          name: media-storage
        ports:
        - containerPort: 443
      volumes:
      - name: media-storage
        hostPath:
          path: /django/khedma/media
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: khedma
spec:
  type: ClusterIP
  ports:
    - port: 443
  selector:
    app: backend
