onedeploy/database-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: khedma
spec:
  selector:
    app: database
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None  # This is necessary for headless service discovery
