onedeploy/deployment-django.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      imagePullSecrets:
        - name: digitalocean-registry
      securityContext:
        fsGroup: 1000
      containers:
        - name: backend-app
          image: mohamedamineblibech/backend:v1.11
          ports:
            - containerPort: 80
          volumeMounts:
            - name: media-volume-mount
              mountPath: /django/khedma/media
            - name: static-volume-mount
              mountPath: /django/khedma/static
      volumes:
        - name: media-volume-mount
          persistentVolumeClaim:
            claimName: media-pvc-local
        - name: static-volume-mount
          persistentVolumeClaim:
            claimName: static-pvc-local
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: we-tekup
  labels:
    app: backend-app
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
