onedeploy/deployment-ft.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deploy
  labels:
    app: example-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: example-app
    spec:
      imagePullSecrets:
      - name: dockerhub-secret # Make sure this secret exists and is correct
      containers:
      - name: example-app
        image: mohamedamineblibech/frontend:v1.1 # Make sure this image is available
        ports:
        - containerPort: 3000
        # Uncomment volumeMounts if you are using secrets or configMaps
        # volumeMounts:
        # - name: secret-volume
        #   mountPath: /secrets/
        # - name: config-volume
        #   mountPath: /configs/
      # Uncomment volumes if you are using secrets or configMaps
      # volumes:
      # - name: secret-volume
      #   secret:
      #     secretName: mysecret
      # - name: config-volume
      #   configMap:
      #     name: example-config

---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-app
spec:
  type: LoadBalancer
  selector:
    app: example-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
