onedeploy/deployment.yaml
---
# Deployment for the Django backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: dockerhub-secret  # If using a private Docker registry
      containers:
        - name: backend
          image: mohamedamineblibech/backend:v12
          command: ["gunicorn", "khedma.wsgi", "--bind", "0.0.0.0:8000", "--certfile=/etc/ssl/certs/fullchain.pem", "--keyfile=/etc/ssl/private/privkey.pem"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /django/khedma/media
              name: media-volume
            - mountPath: /etc/ssl/certs/fullchain.pem
              subPath: fullchain.pem
              name: cert-volume
            - mountPath: /etc/ssl/private/privkey.pem
              subPath: privkey.pem
              name: cert-volume
      volumes:
        - name: media-volume
          hostPath:
            path: ../media
        - name: cert-volume
          secret:
            secretName: backend-cert


---
# Service to expose the backend with NodePort
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: khedma
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 443         # Le port accessible dans le cluster
      targetPort: 8000  # Le port de l'application dans le conteneur
      nodePort: 30080   # (Optionnel) Le port exposé sur chaque nœud
  type: NodePort        # Type modifié pour exposer en NodePort
