onedeploy/frontenddeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: khedma
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: mohamedamineblibech/khedmafrontend:v1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: khedma
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: frontend
