onedeploy/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: khedma-app
spec:
  type: LoadBalancer
  selector:
    app: khedma-app
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 3000
##
