onedeploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: khedma
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30007
  type: NodePort
