onedeploy/3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: khedma-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - khedma12345.ddns.net
    secretName: khedma-app-tls
  rules:
  - host: "138.68.125.193"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
