onedeploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: khedma
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: khedma123456.ddns.net  # Your custom domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 443
  tls:
    - hosts:
        - khedma123456.ddns.net  # Your custom domain
      secretName: backend-tls-secret
